# lox-cpp

./: CMakeLists.txt  CMakeLists_backwords.txt
.cache/clangd/index/: AstPrinter.cc.7328BC116CFF733D.idx  AstPrinter.h.7843EF4264BFEA62.idx  Expression.cc.6539235FAC86D616.idx  Expression.h.67F2BBAAFA6B01B4.idx  Lox.cc.6ED6E4EB24CCAD8C.idx  Lox.h.8575346DCC888353.idx  Object.cc.929ED8EFD262122E.idx  Object.h.42FC11B7DF4A1F7C.idx  Scanner.cc.FC3CC6CECBFA73B1.idx  Scanner.h.F4935C65752BBBAA.idx  Token.cc.A094B502657E07E2.idx  Token.h.69A8088EACE02BD8.idx  TokenType.cc.87B1F5A9B4C64ACF.idx  Tokentype.h.2AE360FD4D648A0D.idx  enum2string.h.03FD19B369BB0F32.idx  gmock-actions.h.671A9438E86B7E0B.idx  gmock-all.cc.189FA7F3819D14EE.idx  gmock-cardinalities.cc.990CB11AA0C3CE16.idx  gmock-cardinalities.h.58B49B5DE8A1C385.idx  gmock-function-mocker.h.5667F08EDA7E4F1E.idx  gmock-generated-actions.h.95E22094A795D565.idx  gmock-internal-utils.cc.FCFA120EA553FF2B.idx  gmock-internal-utils.h.45A84790F8FB155F.idx  gmock-matchers.cc.23DD1B4395968E91.idx  gmock-matchers.h.A812AA504C0754FD.idx  gmock-matchers.h.BE5A5A92AE2D1FC4.idx  gmock-more-actions.h.DB5C2290362DBB13.idx  gmock-more-matchers.h.6361620D85A7990E.idx  gmock-nice-strict.h.89C37804A1852224.idx  gmock-port.h.87A2ED46D79C334D.idx  gmock-port.h.C1DD888B6DC74D33.idx  gmock-pp.h.8FF28A1D978D3CAF.idx  gmock-spec-builders.cc.7D7AFB22B6EB1E70.idx  gmock-spec-builders.h.60C0BF1CD438D67E.idx  gmock.cc.43F6AB6BA09D88B3.idx  gmock.h.4FBA06F8C1B358E8.idx  gmock_main.cc.430B591F69E30D51.idx  gtest-all.cc.E897D123903DB370.idx  gtest-assertion-result.cc.38AE8965FBE31401.idx  gtest-assertion-result.h.725740664C050AAC.idx  (+34 more)
src/: AstPrinter.cc  CMakeLists.txt  Environment.cc  Expression.cc  Interpreter.cc  Lox.cc  LoxClass.cc  LoxFunction.cc  LoxInstance.cc  Object.cc  Parser.cc  Resolver.cc  RuntimeError.cc  Scanner.cc  Statements.cc  Token.cc  Tokentype.cc  main.cc
src/Interpreter/: AstPrinter.cc  CMakeLists.txt  Environment.cc  Expression.cc  Interpreter.cc  Lox.cc  LoxClass.cc  LoxFunction.cc  LoxInstance.cc  Object.cc  Parser.cc  Resolver.cc  RuntimeError.cc  Scanner.cc  Statements.cc  Token.cc  Tokentype.cc
src/include/: AstPrinter.h  Environment.h  Expression.h  Interpreter.h  Lox.h  LoxCallable.h  LoxClass.h  LoxFunction.h  Object.h  Parser.h  Resolver.h  RuntimeError.h  Scanner.h  Statements.h  Token.h  Tokentype.h
src/include/Interpreter/: Environment.h  Expression.h  Interpreter.h  Lox.h  LoxCallable.h  LoxFunction.h  LoxInstance.h  Object.h  Parser.h  Resolver.h  Return.h
src/include/tool/: GenerateAst.cc
src/include/tools/: enum2string.h
test/: CMakeLists.txt  test_astprinter.cc  test_leaks.cc  test_parser.cc  test_scanner.cc
